clusters/home/apps/personal-finance/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: personal-finance
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
