clusters/home/apps/personal-finance/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: personal-finance
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: istio-ingress
  hostnames:
    - "fin.naadroid.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 3000
